# Networking-Framework

./: .gdb_history  .gitignore  CMakeLists.txt  FindLibSSH.cmake  build.fish  build_linux.fish  build_macos.fish  clean_linux.fish  clean_macos.fish  client_main.cpp  icmp.txt  network_config.sh  old_arp  readme.md  server_main.cpp
abstract/: basic_client.h  basic_conn.h  basic_connection.h  basic_encapsulating_client.h  basic_encapsulating_protocol.h  basic_encapsulating_server.h  basic_gateway.h  basic_recv_conn.h  basic_recv_interrupt_handler.h  basic_send_conn.h  basic_session.h  circular_buffer.h  message.h  message_queue.h  msg_protocol_stack.h  multiplexer.h  next_choice.h  protocol_multiplexer.h  protocol_queue.h  protocol_t.h  ring_buffer.h  server.h
abstract/connection/: basic_connection.h  basic_gateway.h
abstract/connection_oriented/: basic_server.h
abstract/connection_oriented/client/: basic_client.h  basic_co_client.h  basic_server_handler.h
abstract/connection_oriented/connection/: tcp_conn.h
abstract/connection_oriented/server/: basic_client_handler.h  basic_server.h
abstract/connectionless/: basic_cl_client.h  basic_cl_server.h
abstract/connectionless/connection/: dns_conn.h  ip4_conn.h  udp_conn.h
abstract/firewall/: basic_firewall_filter.h  data_counter.h  firewall.h  firewall_policy.h
abstract/receiving/: basic_receiver.h  listenable.h  received_msg.h  recv_queue.h
abstract/sending/: basic_sender.h  msg_sender.h  send_msg.h
cmake/: FindPCAP.cmake
docs/: direct_connections.md  linux_related.md  my_own_protocol.md  networking_logic.md  protocol_stacks.md  protocols.md  tools.md  tools_and_main.md
firewalls/network_layer/: only_udp_filter.h
lib/: hexdump.cpp  hexdump.h  split_str.cpp  split_str.h  var_len_encoding.cpp  var_len_encoding.h
lib/linux/: error_codes.h  hardware.cpp  hardware.h  lib_linux.md  linux_iface.cpp  linux_iface.h  linux_iface_net_access.h  linux_iface_network_access.h  tun_tap.cpp  tun_tap.h  virtual_if.cpp  virtual_if.h  virtual_net.cpp  virtual_net.h
lib/macos/: bpf.cpp  bpf.h  hardware.cpp  hardware.h  macos_iface.cpp  macos_iface.h  macos_iface_net_access.h  virtual_net.cpp  virtual_net.h
linux/: hardware.cpp  linux_cl_conn.h  linux_co_conn.h
linux/data_link_layer/: data_link_layer_gateway.cpp  data_link_layer_gateway.h  data_link_sniffer.cpp  data_link_sniffer.h  data_link_traffic.cpp  data_link_traffic.h
linux/dns/: dns_client.cpp  dns_client.h  linux_client_dns.cpp  linux_client_dns.h
linux/ether/: arp_conn_client.cpp  arp_conn_client.h  arp_header.h  ethernet_conn_client.cpp  ethernet_conn_client.h  ethernet_conn_server.cpp  ethernet_conn_server.h  mac_addr.cpp  mac_addr.h
linux/icmp/: icmp_conn_client.cpp  icmp_conn_client.h
linux/ip4/: addit_data.h  checksum.h  handler.h  ip4_conn_client.cpp  ip4_conn_client.h  ip4_conn_server.cpp  ip4_conn_server.h  ip4_header.h  linux_client_ip4.cpp  linux_client_ip4.h  linux_server_ip4.cpp  linux_server_ip4.h
linux/ip_level_proxy/: ip_proxy_client.cpp  ip_proxy_client.h
linux/network_layer_gateway/: network_layer_gateway.cpp  network_layer_gateway.h  network_layer_gateway_client.cpp  network_layer_gateway_client.h  network_layer_gateway_server.cpp  network_layer_gateway_server.h
linux/tcp/: linux_client_tcp.cpp  linux_client_tcp.h  linux_server_tcp.cpp  linux_server_tcp.h  tcp_conn_client.cpp  tcp_conn_client.h  tcp_conn_server.cpp  tcp_conn_server.h
linux/tunnel/: tunnel_client.cpp  tunnel_client.h
linux/udp/: linux_client_udp.cpp  linux_client_udp.h  linux_server_udp.cpp  linux_server_udp.h  udp_conn_client.cpp  udp_conn_client.h  udp_conn_server.cpp  udp_conn_server.h
protocols/arp/: arp_conn_client.cpp  arp_conn_client.h
protocols/dns/: dns_client.cpp  dns_client.h  dns_types.h
protocols/ether/: ethernet_conn_client.cpp  ethernet_conn_client.h  ethernet_conn_server.cpp  ethernet_conn_server.h  ethernet_protocol.cpp  ethernet_protocol.h  mac_addr.cpp  mac_addr.h
protocols/icmp/: icmp_conn_client.cpp  icmp_conn_client.h  icmp_packet.h  icmp_protocol.cpp  icmp_protocol.h
protocols/ip4/: internet_checksum.cpp  ip4_addr.cpp  ip4_addr.h  ip4_conn_client.cpp  ip4_conn_client.h  ip4_conn_server.cpp  ip4_conn_server.h  ip4_protocol.cpp  ip4_protocol.h
protocols/tcp/: tcp_protocol.cpp  tcp_protocol.h  tcp_session.cpp  tcp_session.h
protocols/udp/: udp_conn_client.cpp  udp_conn_client.h  udp_conn_server.cpp  udp_conn_server.h  udp_protocol.cpp  udp_protocol.h
proxy/: ip_proxy.h  proxy_gateway_client.h
proxy/network_layer/: ip_proxy_client.h  ip_proxy_server.h
src/: client_main.cpp  server_main.cpp
src/abstract/: abstract.md  circular_buffer.h  next_choice.h  protocol_t.cpp  protocol_t.h
src/abstract/connection/: basic_connection.h  basic_forwarder_daemon.cpp  basic_forwarder_daemon.h  basic_sniffer.h  conn_aggregator.cpp  conn_aggregator.h  connection.h  msg_connection.h  multi_sniffer.h  two_way_connection.h
src/abstract/firewall/: block_tcp.h  (+5 more)
src/analyzer/: analyzer.cpp  analyzer.h  packet_displayer.cpp  packet_displayer.h
src/firewalls/: basic_firewall_filter.h  data_counter.h  firewall.h
src/linux/: error_codes.h  hardware.cpp  hardware.h  interface_gateway.cpp  interface_gateway.h  interface_sniffer.cpp  interface_sniffer.h  tun_tap.cpp  tun_tap.h  virtual_if.cpp  virtual_if.h
src/onion_network/: client.h  onion_network_client.cpp  onion_network_node.h
src/osi/: data_link_layer_net_access.h  network_layer_net_access.h
src/protocol_stacks/: emp_stack.h  icmp_stack.h  udp_stack.h
src/protocols/: protocol_t.cpp  protocol_t.h  protocols.md
src/utils/: circular_queue.h  data_counter.h  multiplexer.h  network_atomic_queue.h  trie.h  udata.h
src/vpn/: common.h  vpn_client.cpp  vpn_client.h  vpn_daemon.cpp  vpn_daemon.h
temp_connections/dns_server/: dns.cpp  dns.h  dns_client.cpp  dns_server.cpp  dns_server.h
temp_connections/icmp/: icmp_connection_client.cpp  icmp_connection_client.h  icmp_connection_server.cpp  icmp_connection_server.h
temp_connections/udp/: udp_client.cpp  udp_client.h  udp_server.h
(+414 files in other folders)
